<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/screen"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:orientation="vertical">
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listviewdemo"
                android:id="@+id/listviewdemo"/>
        <Button android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/gridviewdemo"
                android:id="@+id/gridviewdemo"/>
        <Button android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/gallerydemo"
                android:id="@+id/gallerydemo"/>
        <Button android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/menudemo"
                android:id="@+id/menudemo"/>
        <Button android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/scrollviewdemo"
                android:id="@+id/scrollviewdemo"/>
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttondemo"
                android:text="@string/buttondemo"/>
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progressbardemo"
                android:text="@string/progressbardemo"/>
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerdemo"
                android:text="@string/spinnerdemo"/>
    </LinearLayout>
</ScrollView>

