<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <Button android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple_list"
            android:id="@+id/button0"/>
    <Button android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_list"
            android:id="@+id/button1"/>
    <Button android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/icon_list"
            android:id="@+id/button2"/>
    <Button android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/adapter_list"
            android:id="@+id/button3"/>
    <Button android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/coloritem_list"
            android:id="@+id/button4"/>

</LinearLayout>