<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <Button android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/optionmenu"
            android:id="@+id/button0"/>
    <Button android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunbmenu"
            android:id="@+id/button1"/>
    <Button android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contextmenu"
            android:id="@+id/button2"/>

</LinearLayout>